ghc-4335c07/testsuite/tests/parser/should_fail/readFail018.hs
-- !!! test the error message for an unterminated nested comment

{-  <-- this one is unterminated (line 3)

{-
-}

-- EOF
